--- a/pages/MissKeep/assets/css/miss-keep.css
+++ b/pages/MissKeep/assets/css/miss-keep.css
@@ -1,3 +1,10 @@
-.miss-keep {
-  background-color: green;
+@import './cmps-css/note-preview.css';
+@import './cmps-css/add-note.css';
+@import './cmps-css/note-editor.css';
+
+/* BASE */
+
+ul{
+  list-style-type: none;
+  padding: 0;
 }
