--- a/pages/MissEmail/assets/css/email-preview.css
+++ b/pages/MissEmail/assets/css/email-preview.css
@@ -1,5 +1,27 @@
 .email-preview-container {
     padding: 25px;
     color: #f1f1f1;
-    background-color: #222;
+    background-color: #222222e3;
+    display: flex;
+    align-items: center;
+}
+
+.email-preview-container * {
+    margin-left: 10px;
+}
+
+.email-preview-container .hide-long-txt {
+    width: 50%;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.txt-body-container {
+    width: 100%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
