--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,28 @@ textarea {
   cursor: pointer;
 }
 
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+a{
+  color: inherit;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+img{
+  object-fit: cover;
+}
+
 /* navbar */
 
 .nav-container {
