--- a/pages/MissEmail/assets/css/email-body.css
+++ b/pages/MissEmail/assets/css/email-body.css
@@ -1,5 +1,6 @@
 .email-body {
     padding: 50px;
     background-color: antiquewhite;
-    width: 80%;
+    width: 95%;
+    padding-left: 180px;
 }
