--- a/pages/MissEmail/assets/css/email-compose.css
+++ b/pages/MissEmail/assets/css/email-compose.css
@@ -14,7 +14,7 @@
 
 .email-compose .form-header {
     padding: 15px;
-    background-color: rgb(56, 56, 56);
+    background-color: #2a2a2a;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
@@ -39,6 +39,7 @@
 .email-compose form textarea {
     height: 300px;
     width: 100%;
+    padding: 15px;
 }
 
 .email-compose .form-btn-container {
@@ -48,6 +49,5 @@
 }
 
 .email-compose .btn-send-email {
-    width: 50px;
-    height: 50px;
+    padding: 20px 30px;
 }
