--- a/pages/MissEmail/assets/css/email-list.css
+++ b/pages/MissEmail/assets/css/email-list.css
@@ -5,7 +5,9 @@
 
 .side-filter {
     color: #f1f1f1;
-    width: 15%;
+    background-color: #121212;
+    position: fixed;
+    width: 170px;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -20,6 +22,7 @@
 }
 
 .side-filter .filter-item:hover {
+    transition: all 0.3s;
     background-color: #fff;
     background-color: #5c5c5c38;
     border-top-right-radius: 15px;
@@ -31,7 +34,8 @@
 }
 
 .email-previews-container {
-    height: 100vh;
-    overflow: overlay;
-    width: 80%;
+    min-height: 100vh;
+    width: 100%;
+    padding-left: 180px;
+    padding-right: 60px;
 }
