--- a/pages/MissEmail/assets/css/email-preview.css
+++ b/pages/MissEmail/assets/css/email-preview.css
@@ -1,17 +1,18 @@
 .email-preview-container {
     padding: 10px 25px;
     color: #f1f1f1;
-    background-color: #222222e3;
+    background-color: #2a2a2ad8;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
-.email-preview-container * {
-    margin-left: 10px;
+.email-preview-container .main-wrapper {
+    display: flex;
 }
 
-.email-preview-container h2 {
-    width: 200px;
+.email-preview-container .main-wrapper i {
+    margin-right: 10px;
 }
 
 .email-preview-container .hide-long-txt {
@@ -21,10 +22,36 @@
     overflow: hidden;
 }
 
-.txt-body-container {
-    width: 100%;
+.txt-body-start-container, .txt-body-mid-container, .txt-body-end-container {
+    display: flex;
+}
+
+.txt-body-start-container {
+    width: 15%;
+}
+
+.txt-body-start-container *:not(:first-child) {
+    margin-left: 10px;
+}
+
+.txt-body-mid-container {
+    width: 70%;
+    margin-left: 30px;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+}
+
+.txt-body-mid-container h2 {
+    font-size: 18px;
+}
+
+.txt-body-mid-container p {
+    color: grey;
+}
+
+.txt-body-end-container {
+    width: 15%;
+    justify-content: center;
 }
