--- a/pages/MissEmail/assets/css/miss-email.css
+++ b/pages/MissEmail/assets/css/miss-email.css
@@ -3,7 +3,8 @@
 @import './email-body.css';
 @import './email-compose.css';
 .miss-email {
-  background-image: url(../img/pegasus-bg.jpg);
+  padding-top: 85px;
   min-height: 100vh;
   font-size: 16px;
+  background-color: #121212;
 }
