--- a/pages/MissKeep/assets/css/miss-keep.css
+++ b/pages/MissKeep/assets/css/miss-keep.css
@@ -1,6 +1,7 @@
 @import './cmps-css/note-preview.css';
 @import './cmps-css/add-note.css';
 @import './cmps-css/note-editor.css';
+@import './cmps-css/note-search.css';
 
 /* BASE */
 
