--- a/pages/MissKeep/assets/css/cmps-css/note-editor.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-editor.css
@@ -11,11 +11,57 @@
 
 
 .note-editor{
-    width:500px;
-    height:500px;
     display:flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: red;
+}
+
+.editor-form{
+    text-align: center;
+    color:white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.editor-form button{
+    width:30px;
+    height:30px;
+    padding: 0;
+    background-color: transparent;
+    color:grey;
+}
+
+.editor-form button:hover{
+    background-color: transparent;
+    color:#007DFC;
+}
+
+.add-todo-input{
+    width:200px;
+    height:34px;
+    border:0;
+    border-radius: 5px;
+    display: flex;
+    background-color: #ffffff;
+}
+
+.add-todo-input input{
+    border:0;
+    background-color: transparent;
+}
+
+.note-editor .submit-button{
+    color:white;
+    font-size:2rem;
+}
+
+.color-pallete{
+    margin-top:10px;
+    font-size: 2rem;
+}
+
+.color-pallete:hover{
+    color:#007DFC;
 }
