--- a/pages/MissKeep/assets/css/cmps-css/note-preview.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-preview.css
@@ -5,13 +5,16 @@
 
 .note{
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     width: 200px;
-    padding-left:10px;
     margin:10px;
+    padding:10px 10px 0 10px;
     box-shadow: 5px 5px 5px 5px grey;
     flex-wrap: wrap;
    min-height:200px;
+   overflow: hidden;
+   border-radius:5px;
 }
 
 .note img{
@@ -28,18 +31,30 @@
 /* BUTTONS */
 
 .note-btns{
-    visibility: hidden;
+    transform: translateY(35px);
+    align-self: flex-end;
+    color:#007DFC;
+}
+
+.note-btns button{
+    color:grey;
+    padding:10px 0 0 15px;
+}
+
+.note-btns button:hover{
+    background-color: transparent;
+    color:#007DFC;
 }
 
 .note:hover .note-btns{
-    visibility: visible;
+    transform: translateY(-5px);
+    transition: 0.3s;
 }
 
 .remove-note-btn{
     align-self: flex-start;
     background-color: transparent;
     border:0;
-    margin-bottom:10px
 }
 
 .remove-note-btn:hover{
@@ -50,7 +65,7 @@ cursor: pointer;
     align-self: flex-start;
     background-color: transparent;
     border:0;
-    margin-bottom:10px
+
 }
 
 .edit-note-btn:hover{
@@ -61,9 +76,27 @@ cursor: pointer;
     align-self: flex-start;
     background-color: transparent;
     border:0;
-    margin-bottom:10px
+
 }
 
 .pin-note-btn:hover{
     cursor: pointer;
+    }
+
+    .todo-note{
+        display:flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+    }
+
+    .todo{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .remove-todo{
+        width:20px;
+        height:20px;
+        padding:0;
     }
