--- a/pages/MissEmail/assets/css/email-compose.css
+++ b/pages/MissEmail/assets/css/email-compose.css
@@ -12,11 +12,24 @@
     border-top-right-radius: 10px;
 }
 
+@media (max-width:550px) {
+    .email-compose {
+        width: 100%;
+        border-radius: 0;
+    }
+}
+
 .email-compose .form-header {
     padding: 15px;
     background-color: #2a2a2a;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+}
+
+@media (max-width:550px) {
+    .email-compose .form-header {
+        border-radius: 0;
+    }
 }
 
 .email-compose .form-header .close-modal {
