--- a/pages/MissEmail/assets/css/email-list.css
+++ b/pages/MissEmail/assets/css/email-list.css
@@ -3,10 +3,6 @@
     justify-content: space-between;
 }
 
-.hamburger {
-    display: none;
-}
-
 .side-filter {
     color: #f1f1f1;
     background-color: #121212;
@@ -18,7 +14,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
     border-right: 2px solid rgb(149 149 149 / 24%);
     border-bottom: 2px solid rgb(149 149 149 / 24%);
 }
@@ -30,25 +26,32 @@
         top: 70px;
         flex-direction: row;
         padding: 15px;
+        justify-content: center;
     }
 }
 
-@media (max-width:650px) {
-    .side-filter {
-        width: 50%;
-        display: none;
-        flex-wrap: wrap;
-    }
+.hamburger {
+    display: none;
+    justify-content: flex-end;
+    align-items: flex-start;
+    background-color: #121212;
+    height: auto;
+    position: fixed;
+    right: 0;
+    top: 10px;
+    z-index: 1;
+    color: #ff9a18;
+    padding: 10px 50px 0 0;
+    font-size: 25px;
+}
+
+.hamburger:hover {
+    color: #F0AF66;
+}
+
+@media (max-width:550px) {
     .hamburger {
         display: flex;
-        justify-content: flex-end;
-        align-items: flex-start;
-        background-color: #121212;
-        height: auto;
-        position: fixed;
-        right: 0;
-        top: 70px;
-        width: 100%;
     }
 }
 
@@ -56,6 +59,7 @@
     width: 100%;
     padding: 15px;
     cursor: pointer;
+    text-align: center;
 }
 
 .side-filter .filter-item:hover {
@@ -66,30 +70,36 @@
 }
 
 .btn-compose {
-    margin: 0 0 50px 15px;
+    color: #007DFC;
+    margin: 15px 0;
+    font-size: 25px;
 }
 
-@media (max-width:780px) {
-    .btn-compose {
-        margin: 0;
-    }
+.btn-compose:hover {
+    color: #036eda;
 }
 
 .email-previews-container {
     min-height: 100vh;
     width: 100%;
-    padding: 15px 10px 0 180px;
+    padding: 10px 10px 0 180px;
 }
 
 @media (max-width:780px) {
     .email-previews-container {
-        padding: 30px 10px 0 10px;
-        margin-top: 150px;
+        padding: 10px 10px 0 10px;
+        margin-top: 95px;
     }
 }
 
-@media (max-width:520px) {
+@media (max-width:550px) {
     .email-previews-container {
         padding: 0;
+        margin-top: 10px;
+    }
+    .side-filter {
+        width: 50%;
+        display: none;
+        flex-wrap: wrap;
     }
 }
