--- a/pages/MissKeep/assets/css/cmps-css/note-editor.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-editor.css
@@ -1,7 +1,7 @@
-.note-editor-bg{
-    height:100vh;
-    width:100%;
-    background-color:  rgb(0 0 0 / 60%);
+.note-editor-bg {
+    height: 100vh;
+    width: 100%;
+    background-color: rgb(0 0 0 / 60%);
     position: absolute;
     top: 0;
     display: flex;
@@ -9,59 +9,63 @@
     justify-content: center;
 }
 
-
-.note-editor{
-    display:flex;
+.note-editor {
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.editor-form{
+.editor-form {
+    flex-wrap: wrap;
     text-align: center;
-    color:white;
+    color: white;
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
 }
 
-.editor-form button{
-    width:30px;
-    height:30px;
+.editor-form input {
+    width: 100%;
+}
+
+.editor-form button {
+    width: 30px;
+    height: 30px;
     padding: 0;
     background-color: transparent;
-    color:grey;
+    color: grey;
 }
 
-.editor-form button:hover{
+.editor-form button:hover {
     background-color: transparent;
-    color:#007DFC;
+    color: #007DFC;
 }
 
-.add-todo-input{
-    width:200px;
-    height:34px;
-    border:0;
+.add-todo-input {
+    width: 200px;
+    height: 34px;
+    border: 0;
     border-radius: 5px;
     display: flex;
     background-color: #ffffff;
 }
 
-.add-todo-input input{
-    border:0;
+.add-todo-input input {
+    border: 0;
     background-color: transparent;
 }
 
-.note-editor .submit-button{
-    color:white;
-    font-size:2rem;
-}
-
-.color-pallete{
-    margin-top:10px;
+.note-editor .submit-button {
+    color: white;
     font-size: 2rem;
 }
 
-.color-pallete:hover{
-    color:#007DFC;
+.color-pallete {
+    margin-top: 10px;
+    font-size: 2rem;
+}
+
+.color-pallete:hover {
+    color: #007DFC;
 }
