--- a/pages/MissKeep/assets/css/cmps-css/note-editor.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-editor.css
@@ -1,7 +1,7 @@
 .note-editor-bg {
     height: 100vh;
     width: 100%;
-    background-color: rgb(0 0 0 / 60%);
+    background-color: #5c5c5cba;;
     position: absolute;
     top: 0;
     display: flex;
@@ -17,16 +17,19 @@
 }
 
 .editor-form {
+    display: flex;
     flex-wrap: wrap;
     text-align: center;
     color: white;
-    display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-direction: column;
 }
 
-.editor-form input {
-    width: 100%;
+.editor-form textarea{
+    border:0;
+    border-radius: 5px;
+    padding:10px 10px;
 }
 
 .editor-form button {
@@ -34,18 +37,44 @@
     height: 30px;
     padding: 0;
     background-color: transparent;
-    color: grey;
 }
+
 
 .editor-form button:hover {
     background-color: transparent;
+    transition:0.3s;
     color: #007DFC;
+}
+
+.image-title{
+    width: 200px;
+    height: 34px;
+    border: 0;
+    border-radius: 5px;
+    padding:0 10px;
+    background-color: #ffffff;
 }
 
 .add-todo-input {
     width: 200px;
     height: 34px;
     border: 0;
+    padding:0 10px;
+    border-radius: 5px;
+    display: flex;
+    background-color: #ffffff;
+}
+
+.add-todo-input button{
+    padding-top:2px;
+    color:#121212;
+}
+
+.add-todo-label{
+    width: 200px;
+    height: 34px;
+    border: 0;
+    padding-left:10px;
     border-radius: 5px;
     display: flex;
     background-color: #ffffff;
@@ -56,16 +85,21 @@
     background-color: transparent;
 }
 
-.note-editor .submit-button {
-    color: white;
+.editor-btns button ,.editor-form label{
+    color:#121212;
     font-size: 2rem;
 }
 
-.color-pallete {
-    margin-top: 10px;
-    font-size: 2rem;
+.editor-btns button{
+    margin:20px;
 }
 
-.color-pallete:hover {
+.color-pallete:hover ,.image-upload:hover {
+    transition:0.3s;
     color: #007DFC;
+    cursor: pointer;
+}
+
+.image-upload{
+    margin-left:20px;
 }
