--- a/pages/MissKeep/assets/css/cmps-css/note-editor.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-editor.css
@@ -14,6 +14,21 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    min-width:250px;
+}
+
+.note.edit-mode{
+    min-height:300px;
+    max-width:400px;
+    box-shadow: 0 0 0;
+    margin:20px 10px;
+}
+
+@media screen and (max-width: 440px){
+    .note.edit-mode{
+        width:90%;
+    }
+
 }
 
 .editor-form {
@@ -27,6 +42,7 @@
 }
 
 .editor-form textarea{
+    width:90%;
     border:0;
     border-radius: 5px;
     padding:10px 10px;
@@ -85,12 +101,10 @@
     background-color: transparent;
 }
 
+
 .editor-btns button ,.editor-form label{
     color:#121212;
     font-size: 2rem;
-}
-
-.editor-btns button{
     margin:20px;
 }
 
