--- a/pages/MissKeep/assets/css/miss-keep.css
+++ b/pages/MissKeep/assets/css/miss-keep.css
@@ -10,3 +10,8 @@ ul{
   padding: 0;
 }
 
+.miss-keep{
+  padding-top: 90px;
+  min-height: 100vh;
+  background: linear-gradient(0deg, rgba(51, 51, 51, 1) 6%, rgba(18, 18, 18, 1) 47%);
+}
