--- a/pages/MissKeep/assets/css/cmps-css/note-preview.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-preview.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     width: 100%;
     padding: 10px 10px 0 10px;
-    box-shadow: 5px 5px 5px 5px grey;
+    box-shadow: 0px 0px 8px 0px #121212;
     flex-wrap: wrap;
     height: 100%;
     overflow: hidden;
@@ -108,4 +108,9 @@
     width: 20px;
     height: 20px;
     padding: 0;
+}
+
+iframe{
+    width:100%;
+    height:100%;
 }
