--- a/pages/MissKeep/assets/css/cmps-css/note-search.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-search.css
@@ -6,12 +6,13 @@
 
 .search-input{
     display: flex;
+    background-color: #2a2a2ad8;
     justify-content: space-between;
     padding:5px 10px;
     margin-bottom: 20px;
-    color:grey;
+    color:#ffffff;
     border-radius: 5px;
-    box-shadow: 5px 5px 5px grey;
+    box-shadow: 0px 0px 8px 0px #121212;
     width:250px;
     cursor: auto;
     overflow: hidden;
@@ -23,6 +24,8 @@
 }
 
 .search-input input{
+    background-color: #2a2a2ad8;
+    color: #ffffff;
     border:0;
     flex-grow: 1;
 }
