--- a/pages/MissEmail/assets/css/email-body.css
+++ b/pages/MissEmail/assets/css/email-body.css
@@ -15,6 +15,10 @@
     width: 100px;
 }
 
+.email-body img {
+    width: 100%;
+}
+
 @media (max-width:780px) {
     .email-body {
         margin: 0 10px 0 10px;
