--- a/pages/MissEmail/assets/css/email-preview.css
+++ b/pages/MissEmail/assets/css/email-preview.css
@@ -72,6 +72,9 @@
 
 @media (max-width:550px) {
     .txt-body-mid-container {
-        visibility: hidden;
+        margin: 0;
+    }
+    .txt-body-mid-container * {
+        overflow: hidden;
     }
 }
