--- a/pages/MissKeep/assets/css/cmps-css/note-preview.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-preview.css
@@ -1,24 +1,19 @@
 .notes {
-    display:grid;
-    width:100%;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-gap: 15px;
-  padding:0 10px;
+    column-count: 4;
+    column-gap: 1em;
 }
 
 .note {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
     width: 100%;
     padding: 10px 10px 0 10px;
     box-shadow: 0px 0px 8px 0px #121212;
-    flex-wrap: wrap;
     height: 100%;
     overflow: hidden;
     border-radius: 5px;
+    background-color: #eee;
+    display: inline-block;
+    margin: 0 0 1em;
 }
-
 
 .note-header {
     text-align: center;
@@ -110,7 +105,7 @@
     padding: 0;
 }
 
-iframe{
-    width:100%;
-    height:100%;
+iframe {
+    width: 100%;
+    height: 100%;
 }
