--- a/pages/MissKeep/assets/css/cmps-css/note-preview.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-preview.css
@@ -1,18 +1,34 @@
 .notes {
-    column-count: 4;
+    column-count: 5;
     column-gap: 1em;
+    padding: 0 20px;
 }
 
 .note {
     width: 100%;
     padding: 10px 10px 0 10px;
-    box-shadow: 0px 0px 8px 0px #121212;
     height: 100%;
     overflow: hidden;
     border-radius: 5px;
     background-color: #eee;
     display: inline-block;
     margin: 0 0 1em;
+}
+
+@media(max-width: 1080px) {
+    .notes {
+        column-count: 3;
+    }
+}
+@media(max-width: 820px) {
+    .notes {
+        column-count: 2;
+    }
+}
+@media(max-width: 820px) {
+    .notes {
+        column-count: 2;
+    }
 }
 
 .note-header {
