--- a/pages/MissKeep/assets/css/miss-keep.css
+++ b/pages/MissKeep/assets/css/miss-keep.css
@@ -10,7 +10,8 @@ ul {
 }
 
 .miss-keep {
-  padding-top: 90px;
+  width:100%;
+  padding-top: 120px;
   min-height: 100vh;
   background: linear-gradient(0deg, rgba(51, 51, 51, 1) 6%, rgba(18, 18, 18, 1) 47%);
 }
