--- a/pages/MissKeep/assets/css/cmps-css/note-editor.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-editor.css
@@ -1,9 +1,8 @@
 .note-editor-bg {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-color: #5c5c5cba;
-    ;
-    position: absolute;
+    position: fixed;
     top: 0;
     display: flex;
     align-items: center;
